--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
     <div class="banner">
       <div class="wrapper">
-        <h2>Comfortable Livings</h2>
-        <p class="tagline">Experience the pet's journey.<p>
+        <div id="intro">
+          <h2>Comfortable Livings</h2>
+          <p class="tagline">Experience the pet's journey<p>
+        </div>
       </div>
     </div>
 
@@ -33,13 +35,17 @@
       <div class="wrapper">
         <section class="primary">
           <h2 class="section-heading">Welcome.</h2>
-          <p>Turtle cage lazy cat foot lazy cat groom canary window tooth brush bedding lazy cat pet supplies turtle water dog shake pet supplies kitty. Walk bird harness wet nose meow harness grooming water dog lol catz water bedding toys bird seed fetch lazy cat. Parakeet scratcher brush biscuit lick dog tooth walk food lazy cat biscuit. Cockatiel Snowball kitten Rover ferret puppy.</p>
-          <img src="img/pepper.jpg" alt="Cat relaxing on back patio">
+          <div class="main-content">
+            <p>Turtle cage lazy cat foot lazy cat groom canary window tooth brush bedding lazy cat pet supplies turtle water dog shake pet supplies kitty. Walk bird harness wet nose meow harness grooming water dog lol catz water bedding toys bird seed fetch lazy cat. Parakeet scratcher brush biscuit lick dog tooth walk food lazy cat biscuit. Cockatiel Snowball kitten Rover ferret puppy.</p>
+            <img src="img/pepper.jpg" alt="Cat relaxing on back patio">
+          </div>
         </section>
         <section class="secondary">
           <h2 class="section-heading">Live in the moment...</h2>
-          <p>Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage.</p>
-          <img src="img/yoshi-sniff.png" alt="Cat relaxing on back patio">
+          <div class="main-content">
+            <p>Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage.</p>
+            <img src="img/yoshi-sniff.png" alt="Cat relaxing on back patio">
+          </div>
         </section>
       </div>
     </main>
