Adjust support images
Put images above descriptions to allow text to wrap when image is
floated.

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
       <div class="wrapper">
         <section class="primary">
           <h2 class="section-heading">Welcome.</h2>
-          <div class="main-content">
-            <p>Turtle cage lazy cat foot lazy cat groom canary window tooth brush bedding lazy cat pet supplies turtle water dog shake pet supplies kitty. Walk bird harness wet nose meow harness grooming water dog lol catz water bedding toys bird seed fetch lazy cat. Parakeet scratcher brush biscuit lick dog tooth walk food lazy cat biscuit. Cockatiel Snowball kitten Rover ferret puppy.</p>
+          <div class="main-content group">
             <img src="img/pepper.jpg" alt="Cat relaxing on back patio">
+            <p>Turtle cage lazy cat foot lazy cat groom canary window tooth brush bedding lazy cat pet supplies turtle water dog shake pet supplies kitty. Walk bird harness wet nose meow harness grooming water dog lol catz water bedding toys bird seed fetch lazy cat. Parakeet scratcher brush biscuit lick dog tooth walk food lazy cat biscuit. Cockatiel Snowball kitten Rover ferret puppy. Parakeet scratcher brush biscuit lick dog tooth walk food lazy cat biscuit. Cockatiel Snowball kitten Rover ferret puppy.</p>
           </div>
         </section>
         <section class="secondary">
           <h2 class="section-heading">Live in the moment...</h2>
-          <div class="main-content">
-            <p>Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage.</p>
+          <div class="main-content group">
             <img src="img/yoshi-sniff.png" alt="Cat relaxing on back patio">
+            <p>Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage.</p>
           </div>
         </section>
       </div>
