Home page additions
Additions to the homepage including the photo/text grid.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <main>
-      <div class="wrapper">
+      <div class="wrapper home-description">
         <section class="primary">
           <h2 class="section-heading">Welcome.</h2>
           <div class="main-content group">
@@ -45,6 +45,18 @@
           <div class="main-content group">
             <img src="img/yoshi-sniff.png" alt="Cat relaxing on back patio">
             <p>Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage.</p>
+          </div>
+        </section>
+        <section>
+          <div class="photo-shuffle group">
+              <div class="card group">
+                <h3>Play or sleep</h3>
+                <img src="img/yoshi-play.jpg" alt="Puppy playing with a stick.">
+              </div>
+              <div class="card group">
+                <img src="img/pepper-sleep.jpg" alt="Cat sleeping in the blankets.">
+                <h3>Make the most of your day</h3>
+              </div>
           </div>
         </section>
       </div>
