--- a/index.html
+++ b/index.html
@@ -32,34 +32,40 @@
     </div>
 
     <main>
-      <div class="wrapper home-description">
-        <section class="primary">
-          <h2 class="section-heading">Welcome.</h2>
-          <div class="main-content group">
-            <img src="img/pepper.jpg" alt="Cat relaxing on back patio">
-            <p>Turtle cage lazy cat foot lazy cat groom canary window tooth brush bedding lazy cat pet supplies turtle water dog shake pet supplies kitty. Walk bird harness wet nose meow harness grooming water dog lol catz water bedding toys bird seed fetch lazy cat. Parakeet scratcher brush biscuit lick dog tooth walk food lazy cat biscuit. Cockatiel Snowball kitten Rover ferret puppy. Parakeet scratcher brush biscuit lick dog tooth walk food lazy cat biscuit. Cockatiel Snowball kitten Rover ferret puppy.</p>
+      <div class="home-description">
+        <section class="home-card primary">
+          <div class="wrapper">
+            <h2 class="section-heading">Welcome.</h2>
+            <div class="main-content group">
+              <img src="img/pepper.jpg" alt="Cat relaxing on back patio">
+              <p>Turtle cage lazy cat foot lazy cat groom canary window tooth brush bedding lazy cat pet supplies turtle water dog shake pet supplies kitty. Walk bird harness wet nose meow harness grooming water dog lol catz water bedding toys bird seed fetch lazy cat. Parakeet scratcher brush biscuit lick dog tooth walk food lazy cat biscuit. Cockatiel Snowball kitten Rover ferret puppy. Parakeet scratcher brush biscuit lick dog tooth walk food lazy cat biscuit. Cockatiel Snowball kitten Rover ferret puppy.</p>
+            </div>
           </div>
         </section>
-        <section class="secondary">
-          <h2 class="section-heading">Live in the moment...</h2>
-          <div class="main-content group">
-            <img src="img/yoshi-sniff.png" alt="Cat relaxing on back patio">
-            <p>Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage.</p>
+        <div class="support-banner play">
+          <h2>Play Hard!</h2>
+        </div>
+        <section class="home-card secondary">
+          <div class="wrapper">
+            <h2 class="section-heading">Live in the moment...</h2>
+            <div class="main-content group">
+              <img src="img/yoshi-sniff.png" alt="Cat relaxing on back patio">
+              <p>Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage.</p>
+            </div>
           </div>
         </section>
-        <section>
-          <div class="photo-shuffle group">
-              <div class="card group">
-                <h3>Play or sleep</h3>
-                <img src="img/yoshi-play.jpg" alt="Puppy playing with a stick.">
-              </div>
-              <div class="card group">
-                <img src="img/pepper-sleep.jpg" alt="Cat sleeping in the blankets.">
-                <h3>Make the most of your day</h3>
-              </div>
+        <div class="support-banner sleep">
+          <h2>Sleep Hard!</h2>
+        </div>
+        <section class="home-card tertiary">
+          <div class="wrapper">
+            <h2 class="section-heading">Endulge in greatness</h2>
+            <div class="main-content group">
+              <img src="img/yoshi-sniff.png" alt="Cat relaxing on back patio">
+              <p>Wet Nose food ferret vaccine finch vaccination Scooby snacks string wagging barky tail head good boy pet gate meow good boy. Commands shake bird biscuit left paw finch bark ferret bark gimme five turtle fur canary. Water puppy dog lick kisses pet supplies slobber cat bird seed. Food sit biscuit groom tongue cage.</p>
+            </div>
           </div>
         </section>
-      </div>
     </main>
 
     <footer>
